# boardgame-finder

./: .env  .env.example  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
boardgamefinder/: bgg.py  config.py  extractors.py  llm_client.py  main.py  matchers.py  models.py  ocr.py  processing.py  prompts.py  scraper.py  storage.py
docs/: index.html
evaluation/: cases.py  evaluate_extractor.py  evaluate_matcher.py
scripts/: generate_site.py  generate_test_cases.py  get_latest_listings.py  rerun_llm_extraction.py  rerun_name_matching.py
src/: bgg.py  config.py  extractors.py  llm.py  llm_client.py  main.py  matchers.py  models.py  processing.py  scraper.py
src/boardgamefinder/: config.py  main.py  prompts.py
src/boardgamefinder/adapters/: bgg_repository.py  firestore_repository.py  llm_client.py  marktplaats_client.py  ocr_client.py
src/boardgamefinder/domain/: models.py
src/boardgamefinder/pipeline/: enrich_listing.py  run_pipeline.py
src/boardgamefinder/services/: extractor.py  matcher.py
src/boardgamefinder/web/: generator.py
src/boardgamefinder/web/templates/: index.html  index.html.j2
tests/: cases.py  test_extractor.py
tests/unit/: test_extractor.py  test_matcher.py
